primeras versiones de struts1 e hibernate